2006-06-20  Eric Blossom  <eb@comsec.com>

	* python/gmsk2/receive_path.py, python/gmsk2/transmit_path.py,
	benchmark_gmsk_{tx,rx}.py: refactored to use modulation
	independent pkt.py code.  Lays the foundation for a single set of
	tools that can exercise all modulations.  More work required to
	meet that goal, but we're closing in.

	* python/gmsk2/tunnel.py: refactored version of
	tunnel_ip_null_mac.  This creates a virtual ethernet inteface
	using the TAP driver, and then tunnels packets across the air
	using GMSK and a simple carrier sense MAC.  Fixed problem with
	truncation of large packets which was leading to stalls.
	
	* python/gmsk2/tunnel_ip_null_mac.py: removed.  Replaced with
	tunnel.py

2006-06-15  Eric Blossom  <eb@comsec.com>

	* python/usrp/usrp_fft.py (app_flow_graph.set_decim): added
	missing return value.

	* python/usrp/usrp_oscope.py, python/usrp/usrp_fft.py: you can now
	change the decimation factor in the GUI.

2006-06-06  Eric Blossom  <eb@comsec.com>

	* python/gmsk2/mpsk.py: Lots of rework.  QPSK is now
	working with mpsk_test.py.   Need to confirm it on the air, and then
	make BPSK work again.
	

2006-05-30  Eric Blossom  <eb@comsec.com>

	Standardized on mpsk as the prefix.  Renamed a bunch of stuff to
	restore sanity: 
	* python/gmsk2/benchmark_xpsk_rx.py -> python/gmsk2/benchmark_mpsk_rx.py
	* python/gmsk2/benchmark_xpsk_tx.py -> python/gmsk2/benchmark_mpsk_tx.py
	* python/gmsk2/psk_receive_path.py  -> python/gmsk2/mpsk_receive_path.py
	* python/gmsk2/psk_transmit_path.py -> python/gmsk2/mpsk_transmit_path.py
	* python/gmsk2/xpsk.py              -> python/gmsk2/mpsk.py
	* python/gmsk2/xpsk_pkt.py          -> python/gmsk2/mpsk_pkt.py
	* python/gmsk2/xpsk_test.py         -> python/gmsk2/mpsk_test.py

2006-05-29  Eric Blossom  <eb@comsec.com>

	* python/gmsk2/qpsk_tester.py, python/gmsk2/qpsk_usrp_tester.py:
	new.  Test benches for qpsk code. Thanks Tom!

2005-12-19  Martin Dvh <gnuradiomail@olifantasia.com>
