@@ -1,5 +1,5 @@
 #
-# Copyright 2004 Free Software Foundation, Inc.
+# Copyright 2006 Free Software Foundation, Inc.
 # 
 # This file is part of GNU Radio
 # 
@@ -19,16 +19,6 @@
 # Boston, MA 02110-1301, USA.
 # 
 
-EXTRA_DIST = 			\
-	audio_copy.py		\
-	audio_fft.py		\
-	audio_play.py		\
-	audio_to_file.py	\
-	dial_tone.py		\
-	dialtone_v.py		\
-	mono_tone.py		\
-	multi_tone.py		\
-	spectrum_inversion.py	\
-	test_resampler.py	
-
+SUBDIRS = hf_explorer hf_radio
+EXTRA_DIST = README
 
